// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useKeyframes() should hoist nested keyframes to root 1`] = `"<div class="stylix-2" data-testid="div1"><div class="stylix-3">test</div></div>"`;

exports[`useKeyframes() should hoist nested keyframes to root 2`] = `
"@keyframes stylix-1 {
from {
  color: red; }
to {
  color: blue; } }
.stylix-2 {
  animation: stylix-1 1s linear infinite; }
@keyframes tester {
from {
  opacity: 0; }
to {
  opacity: 1; } }
@keyframes tester-2 {
from {
  opacity: 0; }
to {
  opacity: 1; } }"
`;

exports[`useKeyframes() should merge duplicate keyframes 1`] = `
"@keyframes stylix-1 {
from {
  color: red; }
to {
  color: blue; } }
.stylix-2 {
  animation: stylix-1 1s linear infinite; }
@keyframes stylix-3 {
from {
  color: green; }
to {
  color: purple; } }
.stylix-4 {
  animation: stylix-3 1s linear infinite; }"
`;

exports[`useKeyframes() should work 1`] = `
"@keyframes stylix-1 {
from {
  color: red; }
to {
  color: blue; } }
.stylix-2 {
  animation: stylix-1 1s linear infinite; }"
`;

exports[`useKeyframes() should work with percentage frames 1`] = `
"@keyframes stylix-1 {
0% {
  color: red; }
100% {
  color: blue; } }
.stylix-2 {
  animation: stylix-1 1s linear infinite; }"
`;
